add some more quiz; add config; simplify quiz title

--- a/deno.json
+++ b/deno.json
@@ -7,6 +7,6 @@
     "tasks": {
         "mkitems": "deno run --allow-read --allow-write mkitems.js",
         "start-static": "cd www; python -m http.server; cd ..",
-        "start": "deno run --allow-read --allow-net main.ts"
+        "start": "deno run --allow-read --allow-net --allow-env main.ts"
     }
 }
